--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,3 +5,66 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+// 汎用クラス
+.mb-20 {
+    margin-bottom: 20px;
+}
+
+.container {
+    width: 400px;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 3.8rem;
+    .title {
+        position: relative;
+        font-size: 4.8rem;
+        .marker {
+            width: 100%;
+            height: 35%;
+            background-color: #a2a2a270;
+            position: absolute;
+            bottom: 5%;
+            z-index: -1;
+        }
+    }
+    .start_btn {
+        background-color: #333;
+        color: #fff;
+        padding: 4px 60px;
+        border: none;
+        outline: none;
+        border-radius: 8px;
+        cursor: pointer;
+        &:hover {
+            opacity:.5;
+        }
+    }
+
+    .question {
+        color: gray;
+    }
+
+    .clear {
+        color: #03a9f4;
+    }
+
+    .typeFormWrapper {
+        border-bottom: 1px solid gray;
+        .typeForm {
+            font-size: inherit;
+            text-align: center;
+            outline: none;
+            border: none;
+        }
+    }
+
+    .gaugeWrapper {
+        border: 1px solid;
+        height: 12px;
+        .gauge {
+            height: 12px;
+            transition: all .3s ease;
+        }
+    }
+}
