--- a/style.css
+++ b/style.css
@@ -5,3 +5,61 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+.mb-20 {
+  margin-bottom: 20px;
+}
+
+.container {
+  width: 400px;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 3.8rem;
+}
+.container .title {
+  position: relative;
+  font-size: 4.8rem;
+}
+.container .title .marker {
+  width: 100%;
+  height: 35%;
+  background-color: #a2a2a270;
+  position: absolute;
+  bottom: 5%;
+  z-index: -1;
+}
+.container .start_btn {
+  background-color: #333;
+  color: #fff;
+  padding: 4px 60px;
+  border: none;
+  outline: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.container .start_btn:hover {
+  opacity: 0.5;
+}
+.container .question {
+  color: gray;
+}
+.container .clear {
+  color: #03a9f4;
+}
+.container .typeFormWrapper {
+  border-bottom: 1px solid gray;
+}
+.container .typeFormWrapper .typeForm {
+  font-size: inherit;
+  text-align: center;
+  outline: none;
+  border: none;
+}
+.container .gaugeWrapper {
+  border: 1px solid;
+  height: 12px;
+}
+.container .gaugeWrapper .gauge {
+  height: 12px;
+  transition: all 0.3s ease;
+}
